--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.NexisApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".auth.login.AddPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".auth.login.AddUserInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".auth.login.SignupNxsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".auth.welcome_pages.WelcomeNexisActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NexisMainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
